--- a/Views/File/NewBookView.fxml
+++ b/Views/File/NewBookView.fxml
@@ -1,1 +1,41 @@
+<?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.collections.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="216.0" prefWidth="352.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Controllers.File.NewBookController">
+  <children>
+    <TitledPane animated="false" collapsible="false" layoutX="0.0" layoutY="0.0" prefHeight="216.0" prefWidth="352.0" text="Registro">
+      <content>
+        <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+          <children>
+            <GridPane fx:id="gridPane" hgap="10.0" layoutX="0.0" layoutY="0.0" prefHeight="137.0" prefWidth="338.0" vgap="10.0">
+              <children>
+                <Label text="ISBN:" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="0" />
+                <Label text="Título:" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+                <Label text="Fecha de publicación:" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+                <TextField fx:id="isbnTextField" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                <TextField fx:id="titleTextField" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+              </children>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="173.0" minWidth="10.0" prefWidth="115.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="244.0" minWidth="10.0" prefWidth="213.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="64.0" minHeight="10.0" prefHeight="38.0" vgrow="NEVER" />
+                <RowConstraints maxHeight="90.0" minHeight="10.0" prefHeight="38.0" vgrow="NEVER" />
+                <RowConstraints maxHeight="90.0" minHeight="10.0" prefHeight="38.0" vgrow="NEVER" />
+              </rowConstraints>
+            </GridPane>
+            <Button fx:id="registerButton" layoutX="174.0" layoutY="155.0" mnemonicParsing="false" onAction="#registerButtonPressed" prefWidth="68.0" text="Registrar" />
+            <Button fx:id="cancelButton" layoutX="270.0" layoutY="155.0" mnemonicParsing="false" onAction="#cancelButtonPressed" prefWidth="68.0" text="Cancelar" />
+          </children>
+        </AnchorPane>
+      </content>
+    </TitledPane>
+  </children>
+</AnchorPane>
